tests/error/type_match/typename_incomplete_type.bz
function test1(T: typename);

function test()
{
	test1(auto);
}
